--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build: .
     ports:
       - "3000:3000"
-    links:
+    depends_on:
       - mongo
   mongo:
     container_name: mongo-facenet
@@ -14,4 +14,4 @@ services:
     volumes:
       - ./data:/data/db
     ports:
-      - "27017:27017"
+      - "27018:27017"
